app/less/inc/login.less
.login {
    height: 100vh;
    min-height: 500px;
    background: @dark-gray;

    text-align: center;
    &:before {
        height: ~"calc(100% - 110px)";
        width: 1px;
        content: "";
    }
}

.l-content {
    height: 100%;

}

.l-wrap,
.login:before {
    display: inline-block;
    vertical-align: middle;
}

.l-wrap {
    width: 80%;
    max-width: 500px;
    margin-top: -50px;
    &.toggled {
        display: inline-block;
    }
}

.lc-item {
    position: relative;
    &:not(:last-child) {
        margin-bottom: 50px;
    }
}

.lci-label {
    position: absolute;
    text-align: center;
    bottom: 7px;
    left: 50%;
    width: 120px;
    margin-left: -60px;
    color: rgba(255, 255, 255, 0.55);
    font-size: 16px;
    transition: all 150ms;
    .transition(all);
    .transition-duration(150ms);
    padding: 2px 0 3px;
    border-radius: 2px;
    font-weight: 400;
}

.lci-helpers {
    position: relative;
    z-index: 1;

    i {
        &:first-child {
            height: 1px;
            width: 100%;
            background: rgba(255, 255, 255, 0.2);
            display: block;
        }
        &:last-child {
            position: absolute;
            height: 1px;
            width: 100%;
            background: #fff;
            left: 0;
            bottom: 0;
            transition: all 300ms;
            -webkit-transition: all 300ms;
            -moz-transition: all 300ms;
            transform: scale(0);
            -webkit-transform: scale(0);
            -moz-transform: scale(0);
        }
        &:before,
        &:after {
            content: "";
            position: absolute;
            bottom: 1px;
            background: rgba(255, 255, 255, 0.2);
            width: 1px;
            height: 10px;
        }
        &:before {
            left: 0;
        }
        &:after {
            right: 0;
        }
    }
}

.lci-text {
    width: 100%;
    height: 50px;
    border: 0;
    background: transparent;
    text-align: center;
    color: #fff;
    position: relative;
    z-index: 1;


    &:focus + label + .lci-helpers i {
        &:last-child {
            .scale(1);
            &:before,
            &:after {
                width: 1px;
                background: #fff;
            }
        }
    }

    &:valid,
    &:focus {
        & + .lci-label {
            bottom: 40px;
            font-size: 13px;
        }
    }
}

.lci-error {
    .lci-label {
        color: #E23F3F;
    }
    .lci-helpers i {
        &:first-child,
        &:first-child:before,
        &:first-child:after {
            background: rgba(226, 63, 63, 0.43);
        }
        &:last-child,
        &:last-child:before,
        &:last-child:after {
            background: #E23F3F !important;
        }
    }
    &:after {
        content: "\f05a";
        font-family: FontAwesome;
        position: absolute;
        top: 17px;
        right: 9px;
        font-size: 20px;
        color: #D33D3E;
    }
}

.l-footer {
    height: 110px;
    padding: 0 50px;
}

.lf-logo {
    float: right;
    img {
        width: 40px;
    }
}

.lf-server {
    float: left;
    color: rgba(255, 255, 255, 0.4);
    font-size: 20px;
    font-weight: 400;
}

@media (max-width: @screen-sm-min) {
    .lf-logo,
    .lf-server {
        float: none;
        display: block;
        text-align: center;
        width: 100%;
    }

    .lf-logo {
        margin-bottom: 5px;
    }

    .lf-server {
        font-size: 15px;
    }
}

.lci-login {
    width: 50px;
    height: 50px;
    border: 1px solid #fff;
    display: inline-block;
    border-radius: 50%;
    line-height: 50px;
    font-size: 22px;
    color: #fff;
    .transition(all);
    .transition-duration(300ms);
    opacity: 0.3;
    background-color: transparent;
    line-height: 45px;
    &:hover {
        color: #fff;
        opacity: 0.8;
        border-color: #fff;
    }
}

.lci-login-text {
    padding: 5px 20px 7px;
    border-radius: 2px;
    border: 1px solid #5B6165;
    color: #A2A5A8;
    position: relative;
    .transition(all);
    .transition-duration(300ms);
    &:hover {
        color: #fff;
        border-color: #fff;
    }
}

/*------------------------------
    Chrome autofill fix
-------------------------------*/
input:-webkit-autofill {
     -webkit-box-shadow:0 0 0 50px @dark-gray inset !important;
     -webkit-text-fill-color: #fff !important;
}

